# nes-emulator

./: .gitignore  CMakeLists.txt  README.md  TODO.md  instruction_list.txt  instructions.txt  write_instruction_table.py
include/: bit_operations.hpp  bus.hpp  cartridge.hpp  cpu.hpp  display.hpp  instruction.hpp  instructions.hpp  keyboard.hpp  palette.hpp  ppu.hpp
scripts/: check_cpu_trace.py  write_instruction_table.py
src/: bit_operations.cpp  bus.cpp  cartridge.cpp  cpu.cpp  cpu.cpp.test  cpu_addr_modes.cpp  cpu_opcodes.cpp  display.cpp  emulator.cpp  instruction.cpp  instructions.cpp  keyboard.cpp  main.cpp  palette.cpp  ppu.cpp  ppu_old.cpp.old  ppu_render.cpp  sprite_viewer.cpp  test_utils.cpp
